[package]
name = "de_cart_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "0.21.2"
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0.164"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "microbench_customer"
harness = false

[[bench]]
name = "microbench_merchant"
harness = false